samples/_failures_safe/1761315015_40b17b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_64aec848.c: In function ‘main’:
./samples/SAFE/__tmp_64aec848.c:157:16: error: missing terminating " character
  157 |         printf("Decompression failed.\n
      |                ^~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_64aec848.c:157:9: error: expected expression at end of input
  157 |         printf("Decompression failed.\n
      |         ^~~~~~
./samples/SAFE/__tmp_64aec848.c:157:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_64aec848.c:157:9: error: expected declaration or statement at end of input
